--- a/MiniPrograms/MiniPrograms/MainWindow.xaml
+++ b/MiniPrograms/MiniPrograms/MainWindow.xaml
@@ -34,9 +34,14 @@
                     <CheckBox x:Name="checkBox" Content="Без повторений" HorizontalAlignment="Left" Margin="32,215,0,0" VerticalAlignment="Top" Width="144" Height="20" IsChecked="True"/>
                 </Grid>
             </TabItem>
-            <TabItem  x:Name="notepad" Header="Блокнот">
+            <TabItem  x:Name="notepad" Header="Квадратный корень числа">
                 <Grid Background="#FFE5E5E5">
-                    
+                    <Button x:Name="btnSqrt" Content="Узнать" HorizontalAlignment="Left" Margin="426,37,0,0" VerticalAlignment="Top" Width="75" Click="btnSqrt_Click"/>
+                    <TextBox x:Name="txtbSqrt" HorizontalAlignment="Left" Height="23" Margin="301,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                    <Label x:Name="lblNameSqrt" Content="Квадратный корень" HorizontalAlignment="Left" Margin="208,171,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSQRT" Content="" HorizontalAlignment="Left" Margin="250,214,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="label2" Content="Введите число, чтобы узнать его квадратный корень" HorizontalAlignment="Left" Margin="0,34,0,0" VerticalAlignment="Top"/>
+
                 </Grid>
             </TabItem>
         </TabControl>
